# hyperoperator-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: hyperoperator.yml
hyperoperator/: Cargo.toml  README.md
hyperoperator/src/: factorial.rs  lib.rs  log.rs  pow.rs  root.rs
